--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,11 +1,29 @@
-:global html,
-:global body {
-    height: 100vh;
-    width: 100vw;
-    margin: 0;
-    padding: 0;
-}
+@import '../../styles/global.scss';
 
 .container {
-    background: blue;
+    width: 80vw;
+    margin: 40px auto;
+    position: relative;
+    padding-top: 1px;
+}
+
+.logo {
+    width: 300px;
+    margin: 50px auto;
+    display: block;
+}
+
+.langSelect {
+    background: darken($bg, 15%);
+    width: 140px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.searchContainer {
+    width: 50vw;
+    margin: 80px auto 40px;
 }
