--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,10 +3,9 @@ $cta: blue;
 
 :global html,
 :global body {
-    height: 100vh;
     width: 100vw;
     margin: 0;
-    padding: 0;
+    padding: 0 0 50px;
     background: $bg;
     font-family: Arial, Helvetica, sans-serif;
 }
