--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -10,6 +10,7 @@
         font-weight: 400;
         text-transform: uppercase;
         text-align: center;
+        color: #272727;
     }
 }
 
@@ -20,7 +21,7 @@
 }
 
 .langSelect {
-    background: darken($bg, 15%);
+    background: #fff;
     width: 140px;
     position: absolute;
     top: 0;
@@ -30,7 +31,7 @@
 }
 
 .searchContainer {
-    width: 50vw;
+    width: 60vw;
     margin: 80px auto 40px;
 }
 
