--- a/src/components/LangSelector/LangSelector.scss
+++ b/src/components/LangSelector/LangSelector.scss
@@ -45,17 +45,18 @@
     position: absolute;
     opacity: 1;
     width: 150px;
-    top: 80px;
+    top: 50px;
     padding: 0 !important;
-    left: 0;
+    left: -18px;
     margin-left: 8px;
     opacity: 0;
     transition: 0.2s;
     pointer-events: none;
+    z-index: 99;
     box-shadow: 0 5px 5px rgba(0, 0, 0, .15);
 
     &.visible {
-        top: 50px;
+        top: 30px;
         opacity: 1;
         pointer-events: all;
     }
@@ -68,13 +69,14 @@
         border-radius: 0;
         margin: 0;
         box-sizing: border-box;
+        background: white;
 
         &:hover {
-            background: lighten($bg, 18%);
+            background: darken($bg, 3%);
         }
 
         &:active {
-            background: lighten($bg, 25%);
+            background: darken($bg, 8%);
         }
     }
 }
