--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -10,13 +10,17 @@
         width: 100%;
         border-radius: 10px;
         border: 0;
-        padding: 15px;
+        padding: 20px;
         font-size: 1rem;
         transition: 0.1s;
         text-align: center;
         box-sizing: border-box;
         color: rgb(92, 92, 92);
-        background: #ccc;
+        background: #fff;
+        border: 1px solid darken($bg, 5%);
+        -webkit-box-shadow: 0px 3px 9px -4px rgba(0,0,0,0.21);
+        -moz-box-shadow: 0px 3px 9px -4px rgba(0,0,0,0.21);
+        box-shadow: 0px 3px 9px -4px rgba(0,0,0,0.21);
     }
 
     .inputBox::placeholder {
@@ -32,8 +36,8 @@
 
     .searchIcon {
         position: absolute;
-        top: 13px;
-        right: 13px;
+        top: 20px;
+        right: 20px;
         width: 20px;
 
         img {
