--- a/src/components/SectionBlock/SectionBlock.scss
+++ b/src/components/SectionBlock/SectionBlock.scss
@@ -1,24 +1,40 @@
 @import '../../styles/global.scss';
 
 .sectionBlockContainer {
-    background: darken($bg, 10%);
-    padding: 20px;
+    background: #fff;
+    padding: 30px;
     box-sizing: border-box;
     border-radius: 10px;
     width: 350px;
+    position: relative;
+    border: 1px solid darken($bg, 5%);
+    -webkit-box-shadow: 0px 3px 9px -4px rgba(0,0,0,0.21);
+    -moz-box-shadow: 0px 3px 9px -4px rgba(0,0,0,0.21);
+    box-shadow: 0px 3px 9px -4px rgba(0,0,0,0.21);
 
     .status {
         border-radius: 50%;
-        width: 10px;
-        height: 10px;
+        width: 15px;
+        height: 15px;
+        top: 35px;
+        right: 40px;
+        position: absolute;
         display: inline-block;
-        background: green;
+        border: 1px solid white;
+        background: #3ef900; /* Old browsers */
+        background: -moz-linear-gradient(top, #3ef900 0%, #1ac900 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(top, #3ef900 0%,#1ac900 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom, #3ef900 0%,#1ac900 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3ef900', endColorstr='#1ac900',GradientType=0 );
+        -webkit-box-shadow: 0px 0px 15px 0px rgba(62,249,0,1);
+        -moz-box-shadow: 0px 0px 15px 0px rgba(62,249,0,1);
+        box-shadow: 0px 0px 15px 0px rgba(62,249,0,1);
     }
 
     h5 {
         margin: 0 0 15px;
         font-weight: 400;
-        font-size: 1.563rem;
+        font-size: 1.25rem;
         display: inline-block;
     }
 
@@ -36,6 +52,8 @@
     p {
         font-size: .75rem;
         text-transform: uppercase;
+        opacity: .5;
+        margin-bottom: 5px;
     }
 
     b {
