--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -19,10 +19,14 @@
     width: 300px;
     margin: 50px auto;
     display: block;
+    z-index: 1;
+    position: relative;
 }
 
 .searchContainer {
     width: 60vw;
+    z-index: 1;
+    position: relative;
     margin: 80px auto 40px;
 
     .search input {
@@ -38,6 +42,11 @@
     }
 }
 
+.childContainer {
+    position: relative;
+    z-index: 1;
+}
+
 .langSelect {
     background: #fff;
     width: 140px;
@@ -45,5 +54,15 @@
     top: 0;
     right: 0;
     cursor: pointer;
+    z-index: 1;
     border-radius: 4px;
+}
+
+.bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    width: 100%;
+    opacity: .1;
 }
