--- a/src/components/BCItemView/BCItemView.scss
+++ b/src/components/BCItemView/BCItemView.scss
@@ -1,18 +1,5 @@
 .container {
-    table {
-        width: 100%;
-        border-radius: 4px;
-        background: white;
-        border-collapse: collapse;
-        box-shadow: 0px 3px 2px -1px rgba(0, 0, 0, .1);
-    }
-
-    td {
-        padding: 25px;
-        border-bottom: 1px solid rgb(236, 236, 236);
-    }
-
-    tr td:first-child {
-        color: transparentize($color: #000000, $amount: 0.4);
+    h2 span {
+        text-transform: none;
     }
 }
