--- a/src/components/Explorer/Explorer.scss
+++ b/src/components/Explorer/Explorer.scss
@@ -2,7 +2,7 @@
     ul {
         padding: 0;
         display: flex;
-        flex-flow: row;
+        flex-flow: row wrap;
         justify-content: space-between;
     }
 
