--- a/src/components/TransactionInfo/TransactionInfo.scss
+++ b/src/components/TransactionInfo/TransactionInfo.scss
@@ -6,6 +6,7 @@
     margin-bottom: 30px;
     box-shadow: 0px 3px 2px -1px rgba(0, 0, 0, .1);
     display: flex;
+    box-sizing: border-box;
 }
 
 .left,
