Working search for tx/block/block number

--- a/src/components/TransactionInfo/TransactionInfo.scss
+++ b/src/components/TransactionInfo/TransactionInfo.scss
@@ -2,17 +2,19 @@
     width: 100%;
     background: white;
     border-radius: 4px;
-    padding: 20px;
+    padding: 25px;
     margin-bottom: 30px;
     box-shadow: 0px 3px 2px -1px rgba(0, 0, 0, .1);
     display: flex;
     box-sizing: border-box;
 }
 
+.left {
+    width: 40%;
+}
+
 .left,
 .right {
-    width: calc(50% - 10px);
-
     ul {
         padding: 0;
 
@@ -37,10 +39,21 @@
 }
 
 .row {
-    display: flex;
+    margin-bottom: 40px;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+
+    p {
+        margin: 0 0 2px 0;
+    }
 
     p:first-child {
         width: 40%;
+        font-size: .7rem;
+        text-transform: uppercase;
+        margin-bottom: 5px;
         color: transparentize($color: #000000, $amount: 0.4);
     }
 
