--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -28,9 +28,15 @@
     z-index: 1;
     position: relative;
     margin: 80px auto 40px;
+    display: flex;
+
+    .search {
+        width: calc(80% - 15px);
+    }
 
     .search input {
-        padding: 20px;
+        width: 100%;
+        padding: 15px;
         border-radius: 8px;
         box-shadow: 0px 10px 24px -11px rgba(0,0,0,0.06);
         -webkit-box-shadow: 0px 10px 24px -11px rgba(0,0,0,0.06);
@@ -45,6 +51,7 @@
 .childContainer {
     position: relative;
     z-index: 1;
+    margin-top: 100px;
 }
 
 .langSelect {
