--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -38,13 +38,23 @@
         width: 100%;
         padding: 15px;
         border-radius: 8px;
-        box-shadow: 0px 10px 24px -11px rgba(0,0,0,0.06);
-        -webkit-box-shadow: 0px 10px 24px -11px rgba(0,0,0,0.06);
-        -moz-box-shadow: 0px 10px 24px -11px rgba(0,0,0,0.06);
+        box-shadow: 0px 10px 24px -11px rgba(0, 0, 0, 0.06);
+        -webkit-box-shadow: 0px 10px 24px -11px rgba(0, 0, 0, 0.06);
+        -moz-box-shadow: 0px 10px 24px -11px rgba(0, 0, 0, 0.06);
     }
 
     .search span {
         right: 20px;
+    }
+
+    .notification {
+        position: absolute;
+        bottom: -70px;
+        left: 0;
+        margin: 0 auto;
+        text-align: center;
+        right: 0;
+        width: 70%;
     }
 }
 
