--- a/src/components/BCItemView/BCItemView.scss
+++ b/src/components/BCItemView/BCItemView.scss
@@ -1,5 +1,54 @@
 .container {
-    h2 span {
-        text-transform: none;
+  h2 {
+    margin-bottom: 0;
+  }
+
+  h2 span {
+    text-transform: none;
+  }
+
+  .dlContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+
+    .dlBtn {
+      width: auto;
+      display: inline-block;
+      margin: 0;
+      font-size: 12px;
+      color: #999;
+      transition: 0.5s;
+      padding: 5px;
+
+      &:hover {
+        cursor: pointer;
+        box-shadow: 0px 0px 5px #999;
+        border-radius: 3px;
+        transition: 0.5s;
+        font-size: 13px;
+      }
+
+      &:hover .dlicon {
+        transform: scale(1.2);
+        transition: 0.5s;
+      }
+
+      &:active {
+        background-color: lightgray;
+      }
+
+      .csvExport {
+        color: #00a8ff;
+
+        .dlicon {
+          width: 12px;
+          padding-left: 8px;
+          padding-right: 8px;
+          transition: 0.5s;
+        }
+      }
     }
+  }
 }
