--- a/src/components/Explorer/Explorer.scss
+++ b/src/components/Explorer/Explorer.scss
@@ -1,30 +1,75 @@
 .computeNodesContainer {
-    ul {
-        padding: 0;
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: space-between;
-    }
+  ul {
+    padding: 0;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+  }
 
-    li {
-        list-style: none;
-    }
+  li {
+    list-style: none;
+  }
 }
 
 .table {
-    background: white;
-    margin-top: 30px;
+  background: white;
+  margin-top: 0;
 }
 
 .blockTable {
-    margin-top: 30px;
-    nav {
-        padding: 15px 0;
+  margin-top: 30px;
+  nav {
+    padding: 15px 0;
+  }
+}
+
+.dlContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+
+  .dlBtn {
+    width: auto;
+    display: inline-block;
+    margin: 0;
+    font-size: 12px;
+    color: #999;
+    transition: .5s;
+    padding: 5px;
+
+    &:hover {
+        cursor: pointer;
+        box-shadow: 0px 0px 5px #999;
+        border-radius: 3px;
+        transition: .5s;
+        font-size: 13px;
     }
+
+    &:hover .dlicon {
+        transform: scale(1.2);
+        transition: .5s;
+    }
+
+    &:active {
+      background-color: lightgray;
+    }
+
+    .csvExport {
+        color: #00a8ff;
+
+        .dlicon {
+          width: 12px;
+          padding-left: 8px;
+          padding-right: 8px;
+          transition: .5s;
+        }
+    }
+  }
 }
 
 :global nav {
-    ul li {
-        width: 50px !important;
-    }
+  ul li {
+    width: 50px !important;
+  }
 }
