--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -1,14 +1,19 @@
 .container {
     position: relative;
     font-family: Arial, Helvetica, sans-serif;
-    height: 100%;
     width: 25%;
     margin-right: 15px;
+    min-width: 150px;
+    max-width: 190px;
 }
 
 .button {
-    padding: 15px;
+    padding: 12px;
     border-radius: 8px;
+}
+
+.buttonCompact {
+    padding: 0;
 }
 
 .menu {
@@ -28,6 +33,8 @@
     background: white;
     transition: 0.2s;
     border-radius: 3px;
+    box-shadow: 0px 2px 10px rgb(52, 52, 52);
+
 
     &.visible {
         height: auto;
