--- a/src/components/Explorer/Explorer.scss
+++ b/src/components/Explorer/Explorer.scss
@@ -14,13 +14,15 @@
 .table {
   background: white;
   margin-top: 0;
+    box-shadow: 0px 0px 5px #898c91;
+
 }
 
 .blockTable {
-  margin-top: 30px;
-  nav {
-    padding: 15px 0;
-  }
+  padding-top: 10px;
+  margin: 0 auto;
+  width: 80vw;
+  min-width: 40vw;
 }
 
 .dlContainer {
