--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,14 +1,24 @@
 @import '../../styles/global.scss';
 
 .container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden;
+width: 100%;
+height: auto;
+overflow: hidden;
 }
 
 .content {
+    width: 100vw;
+    min-height: 100vh;
+    height: auto;
     z-index: 1;
+    overflow: hidden;
+
+    .testObj {
+        width: 200px;
+        height: 500px;
+        background-color: #898c91;
+        margin: 0 auto;
+    }
 }
 
 .langSelect {
