--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,6 +1,7 @@
 .container {
-    position: absolute;
-    width: 100%;
-    padding: 40px 0;
-    background: white;
+    position: relative;
+    width: 100vw;
+    height: 100px;
+    background-color: white;
+    box-shadow: 0px 0px 5px #898c91;
 }
