--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,3 +1,5 @@
+@import '../../styles/global.scss';
+
 .nav {
     background: white;
     padding: 15px 10px;
@@ -6,6 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    height: $nav-height;
 }
 
 .navCompact {
