--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,12 +1,27 @@
 $bg: #E5E8EF;
 $cta: blue;
-$shadow-border: #898c91; 
+$shadow-border: #898c91;
 
-:global html,
+$default-spacing: 25px;
+$nav-height: 20px;
+
+:global html {
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+
 :global body {
+    min-width: 60%;
+    width: 100vw;
+    height: auto;
     margin: 0;
+    padding: 0;
     background: $bg;
     font-family: Arial, Helvetica, sans-serif;
-    min-width: 680px;
-}
+    overflow: hidden;
 
+    #app {
+        overflow: hidden;
+    }
+}
