--- a/src/components/Explorer/Explorer.scss
+++ b/src/components/Explorer/Explorer.scss
@@ -21,53 +21,8 @@
 .blockTable {
   padding-top: 10px;
   margin: 0 auto;
-  width: 80vw;
+  width: 100%;
   min-width: 40vw;
-}
-
-.dlContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-end;
-
-  .dlBtn {
-    width: auto;
-    display: inline-block;
-    margin: 0;
-    font-size: 12px;
-    color: #999;
-    transition: .5s;
-    padding: 5px;
-
-    &:hover {
-      cursor: pointer;
-      box-shadow: 0px 0px 5px #999;
-      border-radius: 3px;
-      transition: .5s;
-      font-size: 13px;
-    }
-
-    &:hover .dlicon {
-      transform: scale(1.2);
-      transition: .5s;
-    }
-
-    &:active {
-      background-color: lightgray;
-    }
-
-    .csvExport {
-      color: #00a8ff;
-
-      .dlicon {
-        width: 12px;
-        padding-left: 8px;
-        padding-right: 8px;
-        transition: .5s;
-      }
-    }
-  }
 }
 
 .pagination {
