--- a/src/components/CsvExport/CsvExport.scss
+++ b/src/components/CsvExport/CsvExport.scss
@@ -1,7 +1,17 @@
+input {
+  border-radius: 4px;
+  width: auto;
+  transition: 0.1s;
+  font-size: 0.875rem;
+  border: 1px solid #cecece;
+  box-sizing: border-box;
+  margin: 15px;
+}
+
 .container {
-    width: 60vw;
-    margin-left: auto;
-    margin-right: auto;
+  width: 60vw;
+  margin-left: auto;
+  margin-right: auto;
 
   h2 span {
     text-transform: none;
@@ -22,33 +32,41 @@
     align-items: center;
 
     p {
-        margin-top: 0;
-        align-self: flex-start;
+      margin-top: 0;
+      align-self: flex-start;
     }
 
     .warningMsg {
-        width: 100%;
-        font-size: small;
-        font-style: italic;
-        color: lightgray;
-        text-align: center;
+      width: 100%;
+      font-size: small;
+      font-style: italic;
+      color: lightgray;
+      text-align: center;
+    }
+
+    .blockRange {
+      width: 100%;
+      font-size: small;
+      color: darkgrey;
+      text-align: center;
     }
 
     .inputs {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        .txtInput {
-            width: 40%;
-            display: inline-block;
-            padding: 15px;
-        }
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+
+      .txtInput {
+        width: 40%;
+        display: inline-block;
+        padding: 15px;
+      }
     }
 
     .btn {
-        width: 20%;
+      width: 20%;
     }
   }
 }
