--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -4,7 +4,7 @@
     margin-top: 25px;
     padding-top: 20px;
     padding-bottom: 20px;
-    width: 80vw;
+    width: auto;
     background: white;
     box-shadow: 0px 0px 5px #898c91;
     border-radius: 5px;
@@ -67,12 +67,10 @@
 }
 
 .notification {
-    position: absolute;
-    bottom: -70px;
-    left: 0;
+    position: relative;
     margin: 0 auto;
     text-align: center;
-    right: 0;
     width: 70%;
     z-index: 99;
+    margin-top: 20px;
 }
