--- a/src/components/TxInfo/TxInfo.scss
+++ b/src/components/TxInfo/TxInfo.scss
@@ -3,10 +3,16 @@
     background: white;
     border-radius: 4px;
     padding: 25px;
-    margin-bottom: 30px;
-    box-shadow: 0px 3px 2px -1px rgba(0, 0, 0, .1);
     display: flex;
     box-sizing: border-box;
+
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    box-shadow: 0px -1px 5px #cecece;
+
+    margin-bottom: 15px;
 }
 
 .left {
@@ -25,7 +31,11 @@
             margin-bottom: 20px;
 
             .row {
-                p, a { margin: 0 0 5px; }
+
+                p,
+                a {
+                    margin: 0 0 5px;
+                }
             }
         }
     }
@@ -36,8 +46,9 @@
 }
 
 .row {
-    margin-bottom: 40px;
-
+    margin-bottom: 15px;
+    text-overflow: ellipsis;
+    
     p {
         margin: 0 0 2px 0;
     }
@@ -74,3 +85,11 @@
         margin-bottom: 10px;
     }
 }
+
+// .addr {
+//     white-space: nowrap;
+//     // width: 100px;
+//     overflow: hidden;
+//     text-overflow: ellipsis;
+//     border: 1px solid #000000;
+// }
