--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,35 +1,22 @@
 @import '../../styles/global.scss';
 
 .container {
-width: 100%;
-height: auto;
-overflow: hidden;
-}
-
-.content {
-    width: 80vw; // Global container width
-    min-height: 100vh;
+    width: 100%;
     height: auto;
-    z-index: 1;
     overflow: hidden;
-    padding-left: 10vw;
-    padding-right: 10vw;
 
-    .testObj {
-        width: 200px;
-        height: 500px;
-        background-color: #898c91;
+    .content {
+        width: 100vw; // Global container width
+        min-height: 100vh;
+        padding: 15px 45px 0px 45px;
+
+        height: auto;
+        z-index: 1;
+        overflow: hidden;
         margin: 0 auto;
-    }
-}
 
-.langSelect {
-    background: #fff;
-    width: 140px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    cursor: pointer;
-    z-index: 1;
-    border-radius: 4px;
+        @media only screen and (max-width: 700px) {
+            padding: 15px 15px 0px 10px;
+        }
+    }
 }
