--- a/src/components/CsvTxExport/CsvTxExport.scss
+++ b/src/components/CsvTxExport/CsvTxExport.scss
@@ -3,7 +3,7 @@ input {
   width: auto;
   transition: 0.1s;
   font-size: 0.875rem;
-  border: 1px solid #cecece;
+  border: 1px solid #cecece; 
   box-sizing: border-box;
   margin: 15px;
 }
@@ -23,7 +23,7 @@ input {
     border-radius: 4px;
     background: white;
     border-collapse: collapse;
-    box-shadow: 0px 3px 2px -1px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px -1px 5px #cecece;
     padding: 25px;
 
     display: flex;
