--- a/src/components/ItemList/BlockItem/BlockItem.scss
+++ b/src/components/ItemList/BlockItem/BlockItem.scss
@@ -1,8 +1,16 @@
+@import 'styles/global.scss';
+
 .item {
+
+    &:hover {
+        background-color: #f5f5f5;
+        cursor: pointer;
+    }
 
     .content {
         display: flex;
         flex-flow: row nowrap;
+        justify-content: space-around;
         align-items: center;
         width: 100%;
         height: 50px;
@@ -30,9 +38,13 @@
             }
         }
 
+        .biggerHashes {
+            width: 80%;
+        }
+
         .hashs {
             // border: dotted lightslategrey 1px;
-            width: 65%;
+            width: 50%;
             height: 100%;
             margin-right: 2px;
 
@@ -90,10 +102,11 @@
 }
 
 a {
-    color: #1890ff;
+    color: $support;
     text-decoration: none;
 
     &:hover {
+        color: $cta;
         text-decoration: underline;
     }
 }
