--- a/src/components/ItemList/ItemList.scss
+++ b/src/components/ItemList/ItemList.scss
@@ -1,5 +1,7 @@
+@import 'styles/global.scss';
+
 .container {
-    width: 48%;
+    width: 49%;
     height: auto;
     background: white;
     box-shadow: 0px 0px 5px #898c91;
@@ -9,8 +11,10 @@
         width: 100%;
         height: 30px;
         box-shadow: 0px 1px 5px #cecece;
+        background-color: $containerBackground;
         display: flex;
         align-items: center;
+        justify-content: center;
 
         h2 {
             color: #585858;
@@ -23,11 +27,10 @@
 
     .content {
         width: 100%;
-        height: 400px;
+        min-height: 502px;
+        height: auto;
         overflow-y: auto;
         overflow-x: hidden;
-
-        
 
         a {
             color: #1890ff;
@@ -50,14 +53,9 @@
     .footer {
         position: relative;
         width: 100%;
-        height: 50px;
-        // border: #585858 dotted 1px;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
-
-        background-color: white;
-        bottom: 0;
-
+        background-color: $containerBackground;
         height: 40px;
         box-shadow: 0px -1px 5px #cecece;
         display: flex;
@@ -74,14 +72,13 @@
     }
 
 
-    // Custom navBar (UNFINISHED)
+    // Custom navBar 
     ::-webkit-scrollbar {
         width: 5px;
         position: absolute;
     }
 
     ::-webkit-scrollbar-track {
-        // border-radius: 10px;
         background-color: white;
     }
 
@@ -101,4 +98,15 @@
 
 .failed {
     text-align: center;
+}
+
+@media only screen and (max-width: 992px) {
+    .container {
+        width: 100%;
+        height: auto;
+        background: white;
+        box-shadow: 0px 0px 5px #898c91;
+        border-radius: 5px;
+        margin-bottom: 15px;
+    }
 }
