--- a/src/components/Overview/Overview.scss
+++ b/src/components/Overview/Overview.scss
@@ -1,8 +1,27 @@
 @import '../../styles/global.scss';
 
+.title {
+    margin-bottom: 0px !important;
+    font-size: 1.3rem;
+    font-weight: 400;
+    margin-bottom: 1rem;
+}
+
+.backgroundBanner {
+    position: absolute;
+    left: 0;
+    top: 56px;
+    width: 100vw;
+    height: 200px;
+    background-color: #09314D;
+    z-index: 9;
+}
+
 .container {
+    position: relative;
+    // z-index: 99;
     margin-top: $default-spacing;
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: space-between;
 }
