--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,68 +1,52 @@
+@import 'styles/global.scss';
+
 .searchContainer {
     position: relative;
-    margin: 0 auto;
-    margin-top: 25px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    width: auto;
-    background: white;
-    box-shadow: 0px 0px 5px #898c91;
+    z-index: 99;
+    width: 55%;
+    margin: 10px 0px 10px 0px;
+    // box-shadow: 0px -1px 5px #cecece;
     border-radius: 5px;
+    // background: white;
+    box-shadow: 0px 0px 5px #898c91;
 
-    button:hover {
-        background: lightgrey !important;
-    }
-
-    .innerContainer {
-        display: flex;
-        justify-content: center;
-        padding-left: 15px;
-        padding-right: 15px;
-        align-items: center;
-    }
-
-    .search {
-        width: 60vw;
-    }
-
-    .search input {
+    .inputGroup {
         width: 100%;
-        padding: 12px;
-        border-radius: 8px;
-        box-shadow: 0px 10px 24px -11px rgba(0, 0, 0, 0.06);
-        -webkit-box-shadow: 0px 10px 24px -11px rgba(0, 0, 0, 0.06);
-        -moz-box-shadow: 0px 10px 24px -11px rgba(0, 0, 0, 0.06);
-    }
-
-    .search span {
-        margin-top: 14px;
-        margin-bottom: 14px;
-    }
-}
-
-.navSearchContainer {
-    justify-self: flex-end;
-    position: relative;
-
-    .innerContainer {
         display: flex;
-        justify-content: center;
-        // padding-left: 15px;
-        // padding-right: 15px;
         align-items: center;
-    }
+        margin: 0;
 
-    .search {
-        width: auto;
-    }
+        div {
+            a {
+                text-decoration: none;
+            }
+        }
 
-    .search input {
-        width: 100%;
-        padding: 12px;
-        border-radius: 8px;
-        box-shadow: 0px 10px 24px -11px rgba(0, 0, 0, 0.06);
-        -webkit-box-shadow: 0px 10px 24px -11px rgba(0, 0, 0, 0.06);
-        -moz-box-shadow: 0px 10px 24px -11px rgba(0, 0, 0, 0.06);
+        .dropdown-menu {
+            background-color: red;
+        }
+
+        button {
+            position: relative;
+            height: 45px;
+            background-color: $containerBackground;
+            color: black;
+            z-index: 100;
+
+            &:hover {
+                color: black;
+            }
+        }
+
+        input {
+            height: 45px;
+            margin: 0;
+            background-color: white;
+        }
+
+        .searchIcon {
+            height: 16px;
+        }
     }
 }
 
@@ -73,4 +57,10 @@
     width: 70%;
     z-index: 99;
     margin-top: 20px;
+}
+
+@media only screen and (max-width: 992px) {
+    .searchContainer {
+        width: 100%;
+    }
 }
