--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -5,7 +5,107 @@
 .container {
     position: relative;
     width: 100vw;
-    height: $footerHeight;
+    margin-top: 30px;
     background-color: $nav;
     box-shadow: 0px 0px 5px #898c91;
+    padding: 50px 0;
+
+    .mainContainer {
+        display: flex;
+        flex-direction: column;
+
+        @media screen and (min-width: 960px) {
+            flex-flow: row;
+            justify-content: space-around;
+        }
+    }
+
+    section {
+        margin-right: 30px;
+    }
+
+    h3 {
+        color: white;
+        font-size: 1rem;
+
+        &:after {
+            content: '';
+            display: block;
+            width: 100%;
+            height: 1px;
+            background-color: white;
+            margin-top: 10px;
+        }
+    }
+
+    ul {
+        padding-left: 0;
+    }
+
+    li {
+        list-style: none;
+    }
+
+    p, a {
+        color: white;
+        display: inline-block;
+        margin-right: 20px;
+        margin-top: 15px;
+        font-size: .75rem;
+    }
+
+    a {
+        margin-top: 0;
+        text-decoration: none;
+    }
+
+    .bg {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-position: center;
+        display: block;
+        top: 0;
+        pointer-events: none;
+
+        img {
+            display: block;
+        }
+    }
+}
+
+.socialMedia {
+    width: 90%;
+    margin: 30px auto 0;
+    display: flex;
+    justify-content: space-between;
+
+    &:before {
+        content: '';
+        display: block;
+        width: 87%;
+        height: 1px;
+        background-color: white;
+        margin-bottom: 10px;
+        position: absolute;
+    }
+
+    ul {
+        padding: 0;
+        margin-top: 10px;
+        margin-right: 40px;
+    }
+
+    li {
+        list-style: none;
+        width: 20px;
+        height: 20px;
+        display: inline-block;
+        margin-left: 10px;
+
+        a, img {
+            width: 100%;
+            height: auto;
+        }
+    }
 }
