--- a/src/components/ItemList/ItemList.scss
+++ b/src/components/ItemList/ItemList.scss
@@ -4,17 +4,20 @@
     width: 49%;
     height: auto;
     background: white;
-    box-shadow: 0px 0px 5px #898c91;
-    border-radius: 5px;
+    box-shadow: 0px 2px 2px rgba(0,0,0, 0.1);
+    border-radius: 10px;
+    border: 1px solid #ccc;
 
     .header {
         width: 100%;
-        height: 30px;
-        box-shadow: 0px 1px 5px #cecece;
+        height: 40px;
         background-color: $containerBackground;
         display: flex;
         align-items: center;
         justify-content: center;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        padding: 5px 0;
 
         h2 {
             color: #585858;
@@ -53,20 +56,19 @@
     .footer {
         position: relative;
         width: 100%;
-        border-bottom-left-radius: 5px;
-        border-bottom-right-radius: 5px;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
         background-color: $containerBackground;
-        height: 40px;
-        box-shadow: 0px -1px 5px #cecece;
+        height: 50px;
         display: flex;
         align-items: center;
         justify-content: center;
 
         .allBtn {
             width: 90%;
-            height: 25px;
+            height: 30px;
             border: 0.5px lightgrey solid !important;
-            text-transform: lowercase;
+            text-transform: capitalize;
             color: #1890ff;
         }
     }
@@ -105,8 +107,8 @@
         width: 100%;
         height: auto;
         background: white;
-        box-shadow: 0px 0px 5px #898c91;
-        border-radius: 5px;
-        margin-bottom: 15px;
+        box-shadow: 0px 2px 2px rgba(0,0,0, 0.1);
+        border-radius: 10px;
+        border: 1px solid #ccc;
     }
 }
