--- a/src/components/TxView/TxView.scss
+++ b/src/components/TxView/TxView.scss
@@ -2,7 +2,7 @@
 
 .container {
     width: 100%;
-    margin: 0 auto;
+    margin: 30px auto 0;
     padding-bottom: 20px;
 
     h2 {
@@ -20,7 +20,7 @@
     .infoContainer {
       box-shadow: $box-shadow;
       border-radius: 4px;
-      margin-bottom: 20px;
+      margin-bottom: 50px;
     }
   
     .blockNum {
