--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,7 +7,7 @@ $shadow-border: #898c91;
 $support: #3498db;
 $cta: $shockPink;
 
-$box-shadow: 0px -1px 5px #cecece; 
+$box-shadow: 0px 1px 2px rgba(0,0,0,0.05); 
 
 $default-spacing: 15px;
 $nav-height: 20px;
