--- a/src/components/BlockView/BlockView.scss
+++ b/src/components/BlockView/BlockView.scss
@@ -29,7 +29,7 @@
           border-radius: 25px;
           background-color: #c4c4c4;
           margin-left: 10px;
-          padding: 8px;
+          padding: 4px 12px 4px 12px;
         }
       }
 
