--- a/src/components/TxView/TxView.scss
+++ b/src/components/TxView/TxView.scss
@@ -74,5 +74,46 @@
         }
       }
     }
+
+    .txHeading {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      .txTitle {
+        margin-bottom: 20px;
+
+        .badge {
+          width: 50px;
+          font-size: medium;
+          font-weight: bold;
+          border-radius: 25px;
+          background-color: #c4c4c4;
+          margin-left: 10px;
+          padding: 4px 12px 4px 12px;
+
+        }
+      }
+
+      .txBtn {
+        height: 30px;
+        width: auto;
+        justify-self: flex-end;
+      }
+
+    }
+
+    .hidden {
+      margin: 0 auto;
+      font-weight: 200;
+      color: #999;
+      font-style: italic;
+      border: solid white 1px;
+      box-shadow: 0px -1px 5px #cecece;
+      background-color: white;
+      border-radius: 3px;
+      width: auto;
+      padding: 5px;
+    }
   }
   
