Added 'Approximation' badge for pre ref timestamps.

--- a/src/components/Pill/Pill.scss
+++ b/src/components/Pill/Pill.scss
@@ -9,3 +9,15 @@
     text-transform: uppercase;
     vertical-align: middle;
 }
+
+.variant {
+    padding: 3px 10px;
+    border-radius: 15px;
+    margin-right: 10px;
+    display: inline-block;
+    background-color: orange;
+    font-weight: 700;
+    font-size: .75rem;
+    text-transform: uppercase;
+    vertical-align: middle;
+}
